@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.common;
 
@@ -38,7 +24,7 @@ public class TestCSVFileUtils {
     CSVParser parser = parse("grades.csv");
 
     assertEquals(9, parser.getHeaderNames().size());
-    assertEquals("Lastname", parser.getHeaderNames().get(0));
+    assertEquals("Lastname", parser.getHeaderNames().getFirst());
     assertEquals(16, parser.getRecords().size());
   }
 
@@ -48,7 +34,7 @@ public class TestCSVFileUtils {
 
     // Without handle files that start with a Byte Order Mark (BOM), we would have ["Lastname"] as
     // first header name instead of [Lastname]
-    assertEquals("Lastname", bomParser.getHeaderNames().get(0));
+    assertEquals("Lastname", bomParser.getHeaderNames().getFirst());
 
     // Check if records are strictly identical to file without BOM
     CSVParser parser = parse("grades.csv");
