@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.data.csv;
 
@@ -59,8 +45,8 @@ public class CSVInputJson extends CSVInput {
       return search;
     }
 
-    return Stream.of(search, String.format("self.jsonModel = '%s'", getJsonModel()))
-        .map(item -> String.format("(%s)", item))
+    return Stream.of(search, "self.jsonModel = '%s'".formatted(getJsonModel()))
+        .map("(%s)"::formatted)
         .collect(Collectors.joining(" AND "));
   }
 
@@ -74,7 +60,7 @@ public class CSVInputJson extends CSVInput {
     if (jsonBindings == null) {
       final CSVBind jsonModelBinding = new CSVBind();
       jsonModelBinding.setField("jsonModel");
-      jsonModelBinding.setExpression(String.format("'%s'", getJsonModel()));
+      jsonModelBinding.setExpression("'%s'".formatted(getJsonModel()));
       jsonBindings = Collections.singletonList(jsonModelBinding);
     }
 
