@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.data.xml;
 
@@ -76,7 +62,7 @@ public class XMLBindJson extends XMLBind {
               Optional.ofNullable(
                       parentJsonModel.isPresent()
                           ? MetaStore.findJsonFields(parentJsonModel.get())
-                          : MetaStore.findJsonFields(parent.getTypeName(), fieldParts.get(0)))
+                          : MetaStore.findJsonFields(parent.getTypeName(), fieldParts.getFirst()))
                   .map(fields -> fields.get(fieldParts.get(1)))
                   .orElse(Collections.emptyMap());
       jsonModel = (String) jsonField.get("jsonTarget");
@@ -137,7 +123,7 @@ public class XMLBindJson extends XMLBind {
     return Optional.of(
             Stream.of(search, domain)
                 .filter(StringUtils::notBlank)
-                .map(item -> String.format("(%s)", item))
+                .map("(%s)"::formatted)
                 .collect(Collectors.joining(" AND ")))
         .filter(StringUtils::notBlank)
         .orElse(null);
@@ -159,7 +145,7 @@ public class XMLBindJson extends XMLBind {
     if (jsonBindings == null) {
       final XMLBind jsonModelBinding = new XMLBind();
       jsonModelBinding.setField("jsonModel");
-      jsonModelBinding.setExpression(String.format("'%s'", getJsonModel()));
+      jsonModelBinding.setExpression("'%s'".formatted(getJsonModel()));
       jsonBindings = Collections.singletonList(jsonModelBinding);
     }
 
