@@ -1,81 +1,56 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.meta;
 
 import static com.axelor.common.StringUtils.isBlank;
+import static com.axelor.common.StringUtils.notBlank;
 
 import com.axelor.app.AppSettings;
 import com.axelor.app.AvailableAppSettings;
+import com.axelor.common.FileUtils;
 import com.axelor.common.MimeTypesUtils;
 import com.axelor.common.StringUtils;
 import com.axelor.db.EntityHelper;
 import com.axelor.db.Model;
-import com.axelor.db.tenants.TenantResolver;
 import com.axelor.dms.db.DMSFile;
 import com.axelor.dms.db.repo.DMSFileRepository;
+import com.axelor.file.store.FileStoreFactory;
+import com.axelor.file.store.Store;
+import com.axelor.file.store.StoreType;
+import com.axelor.file.store.UploadedFile;
+import com.axelor.file.temp.TempFiles;
 import com.axelor.inject.Beans;
 import com.axelor.meta.db.MetaAttachment;
 import com.axelor.meta.db.MetaFile;
 import com.axelor.meta.db.repo.MetaAttachmentRepository;
 import com.axelor.meta.db.repo.MetaFileRepository;
-import com.google.common.base.Preconditions;
 import com.google.inject.persist.Transactional;
-import java.io.BufferedOutputStream;
+import jakarta.activation.MimeType;
+import jakarta.activation.MimeTypeParseException;
+import jakarta.inject.Inject;
+import jakarta.persistence.PersistenceException;
+import jakarta.ws.rs.core.MediaType;
 import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.file.CopyOption;
-import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.SimpleFileVisitor;
-import java.nio.file.StandardCopyOption;
-import java.nio.file.attribute.BasicFileAttributes;
-import java.nio.file.attribute.FileAttribute;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import javax.activation.MimeType;
-import javax.activation.MimeTypeParseException;
-import javax.inject.Inject;
-import javax.persistence.PersistenceException;
 
 /** This class provides some helper methods to deal with files. */
 public class MetaFiles {
 
-  private static final String DEFAULT_UPLOAD_PATH = "{java.io.tmpdir}/axelor/attachments";
-
-  private static final Path UPLOAD_PATH =
-      Paths.get(AppSettings.get().get(AvailableAppSettings.DATA_UPLOAD_DIR, DEFAULT_UPLOAD_PATH));
-
   private static final String UPLOAD_NAME_PATTERN_AUTO = "auto";
 
-  private static final CopyOption[] COPY_OPTIONS = {
-    StandardCopyOption.REPLACE_EXISTING, StandardCopyOption.COPY_ATTRIBUTES
-  };
-
-  private static final CopyOption[] MOVE_OPTIONS = {StandardCopyOption.REPLACE_EXISTING};
-
-  // temp clean up threshold 24 hours
-  private static final long TEMP_THRESHOLD = 24 * 3600 * 1000;
+  static final String MSG_FILE_NAME_NOT_ALLOWED = /*$$(*/ "File name is not allowed: {0}" /*)*/;
+  static final String MSG_FILE_TYPE_NOT_ALLOWED = /*$$(*/ "File type is not allowed: {0}" /*)*/;
 
   private static final Object lock = new Object();
 
@@ -110,92 +85,59 @@ public class MetaFiles {
             });
   }
 
-  private static Path getUploadPath() {
-    String tenantId = TenantResolver.currentTenantIdentifier();
-    if (StringUtils.isBlank(tenantId)) {
-      return UPLOAD_PATH;
-    }
-    return UPLOAD_PATH.resolve(tenantId);
-  }
-
-  private static Path getUploadPath(String fileName) {
-    final Path uploadPath = getUploadPath().normalize();
-    final Path targetPath = uploadPath.resolve(fileName).normalize();
-    if (targetPath.startsWith(uploadPath) && !targetPath.equals(uploadPath)) {
-      return targetPath;
-    }
-    throw new IllegalArgumentException("Invalid file name: " + fileName);
-  }
-
-  private static Path getTempPath() {
-    return getUploadPath("tmp");
-  }
-
-  private static Path getTempPath(String fileName) {
-    return getTempPath().resolve(fileName);
-  }
-
   /**
-   * Get the actual storage path of the file represented by the give {@link MetaFile} instance.
+   * Get the storage path of the file represented by the give {@link MetaFile} instance.
    *
    * @param file the given {@link MetaFile} instance
    * @return actual file path
    */
   public static Path getPath(MetaFile file) {
-    Preconditions.checkNotNull(file, "file instance can't be null");
-    return getUploadPath(file.getFilePath());
+    Objects.requireNonNull(file, "file instance can't be null");
+    Store store = FileStoreFactory.getStore();
+    return store.getPath(file.getFilePath());
   }
 
   /**
-   * Get the actual storage path of the given relative file path.
+   * Get the storage path of the given relative file path.
    *
    * @param filePath relative file path
    * @return actual file path
    */
   public static Path getPath(String filePath) {
-    Preconditions.checkNotNull(filePath, "file path can't be null");
-    return getUploadPath(filePath);
+    Objects.requireNonNull(filePath, "file path can't be null");
+    Store store = FileStoreFactory.getStore();
+    return store.getPath(filePath);
   }
 
   /**
    * Check whether the given filePath is valid.
    *
-   * <p>The filePath is value if it is inside upload directory or matches upload file whitelist
-   * pattern and doesn't match upload blacklist pattern.
+   * <p>The filePath is valid if it matches upload file whitelist pattern and doesn't match upload
+   * blacklist pattern.
    *
    * @param filePath the file path to check
-   * @throws IllegalArgumentException
+   * @throws IllegalFileException if the file path to check is not valid
    */
   public static void checkPath(String filePath) {
-    Preconditions.checkNotNull(filePath, "file path can't be null");
+    Objects.requireNonNull(filePath, "file path can't be null");
 
     boolean blocked =
-        BLACKLIST_PATTERNS.isEmpty()
-            ? false
-            : BLACKLIST_PATTERNS.stream()
-                .map(p -> p.matcher(filePath))
-                .filter(m -> m.find())
-                .findFirst()
-                .isPresent();
+        !BLACKLIST_PATTERNS.isEmpty() && isMatchingFileNamePattern(BLACKLIST_PATTERNS, filePath);
 
     if (blocked) {
-      throw new IllegalArgumentException("File name is not allowed: " + filePath);
+      throw new IllegalFileException(MSG_FILE_NAME_NOT_ALLOWED, filePath);
     }
 
     boolean allowed =
-        WHITELIST_PATTERNS.isEmpty()
-            ? true
-            : WHITELIST_PATTERNS.stream()
-                .map(p -> p.matcher(filePath))
-                .filter(m -> m.find())
-                .findFirst()
-                .isPresent();
+        WHITELIST_PATTERNS.isEmpty() || isMatchingFileNamePattern(WHITELIST_PATTERNS, filePath);
 
     if (!allowed) {
-      throw new IllegalArgumentException("File name is not allowed: " + filePath);
+      throw new IllegalFileException(MSG_FILE_NAME_NOT_ALLOWED, filePath);
     }
+  }
 
-    getUploadPath(filePath);
+  private static boolean isMatchingFileNamePattern(List<Pattern> patterns, String filePath) {
+    return patterns.stream().map(p -> p.matcher(filePath)).anyMatch(Matcher::find);
   }
 
   /**
@@ -205,7 +147,7 @@ public class MetaFiles {
    * blacklist types.
    *
    * @param fileType the file type to check
-   * @throws IllegalArgumentException
+   * @throws IllegalFileException if the file type to check is not valid
    */
   public static void checkType(String fileType) {
     if (StringUtils.isBlank(fileType)) {
@@ -219,23 +161,21 @@ public class MetaFiles {
       return;
     }
 
-    boolean blocked =
-        BLACKLIST_TYPES.isEmpty()
-            ? false
-            : BLACKLIST_TYPES.stream().filter(m -> m.match(mimeType)).findFirst().isPresent();
+    boolean blocked = !BLACKLIST_TYPES.isEmpty() && isMatchingMimeType(BLACKLIST_TYPES, mimeType);
 
     if (blocked) {
-      throw new IllegalArgumentException("File type is not allowed: " + fileType);
+      throw new IllegalFileException(MSG_FILE_TYPE_NOT_ALLOWED, fileType);
     }
 
-    boolean allowed =
-        WHITELIST_TYPES.isEmpty()
-            ? true
-            : WHITELIST_TYPES.stream().filter(m -> m.match(mimeType)).findFirst().isPresent();
+    boolean allowed = WHITELIST_TYPES.isEmpty() || isMatchingMimeType(WHITELIST_TYPES, mimeType);
 
     if (!allowed) {
-      throw new IllegalArgumentException("File type is not allowed: " + fileType);
+      throw new IllegalFileException(MSG_FILE_TYPE_NOT_ALLOWED, fileType);
     }
+  }
+
+  private static boolean isMatchingMimeType(List<MimeType> mimeTypes, MimeType actualMimeType) {
+    return mimeTypes.stream().anyMatch(m -> m.match(actualMimeType));
   }
 
   /**
@@ -244,40 +184,32 @@ public class MetaFiles {
    * <p>The file is valid if it matches file upload whitelist types and doesn't match upload
    * blacklist types.
    *
+   * <p>Detection is based solely on the file content (magic bytes), without any filename hint, to
+   * prevent spoofing via file extension.
+   *
    * @param file the file to check
-   * @throws IllegalArgumentException
+   * @throws IllegalFileException if the content type is not valid
    */
   public static void checkType(File file) {
-    Preconditions.checkNotNull(file, "file can't be null");
-    checkType(MimeTypesUtils.getContentType(file));
+    Objects.requireNonNull(file, "file can't be null");
+    checkType(MimeTypesUtils.getContentType(file, null));
   }
 
   /**
-   * Create a temporary file under upload directory.
+   * Check whether the given input stream content is valid.
    *
-   * @param prefix the file prefix to use
-   * @param suffix the file suffix to use
-   * @param attrs an optional list of file attributes
-   * @return the path to the newly created file
-   * @throws IOException if an I/O error occurs
-   * @see Files#createTempFile(String, String, FileAttribute...)
-   */
-  public static Path createTempFile(String prefix, String suffix, FileAttribute<?>... attrs)
-      throws IOException {
-    // make sure the upload directories exist
-    Path tmp = getTempPath();
-    Files.createDirectories(tmp);
-    return Files.createTempFile(tmp, prefix, suffix, attrs);
-  }
-
-  /**
-   * Find a temporary file by the given name created previously.
+   * <p>The content is valid if it matches file upload whitelist types and doesn't match upload
+   * blacklist types.
    *
-   * @param name name of the temp file
-   * @return file path
+   * <p>Detection is based solely on the stream content (magic bytes), without any filename hint, to
+   * prevent spoofing via file extension.
+   *
+   * @param stream the input stream to check
+   * @throws IllegalFileException if the content type is not valid
    */
-  public static Path findTempFile(String name) {
-    return getTempPath(name);
+  public static void checkType(InputStream stream) {
+    Objects.requireNonNull(stream, "stream can't be null");
+    checkType(MimeTypesUtils.getContentType(stream, null));
   }
 
   private String getTargetName(String fileName) {
@@ -306,13 +238,13 @@ public class MetaFiles {
     if (targetName.contains("{name}")) {
       targetName = targetName.replace("{name}", fileName);
     } else {
-      targetName = Paths.get(targetName, fileName).toString();
+      targetName = Path.of(targetName, fileName).toString();
     }
 
     return targetName;
   }
 
-  private Path getNextPath(String fileName) {
+  private String resolveFileName(String fileName, Store store) {
     synchronized (lock) {
       int dotIndex = fileName.lastIndexOf('.');
       int counter = 1;
@@ -323,49 +255,11 @@ public class MetaFiles {
         fileNameBase = fileName.substring(0, dotIndex);
       }
       String targetName = getTargetName(fileName);
-      Path target = getUploadPath(targetName);
-      Path targetDir = target.getParent();
-      while (Files.exists(target)) {
+      while (store.hasFile(targetName)) {
         targetName = fileNameBase + "-" + counter++ + fileNameExt;
-        target = targetDir.resolve(targetName);
       }
-      return target;
+      return targetName;
     }
-  }
-
-  /**
-   * Clean up obsolete temporary files from upload directory.
-   *
-   * @throws IOException if an I/O error occurs
-   */
-  public void clean() throws IOException {
-    if (!Files.isDirectory(getTempPath())) {
-      return;
-    }
-    final long currentTime = System.currentTimeMillis();
-    Files.walkFileTree(
-        getTempPath(),
-        new SimpleFileVisitor<Path>() {
-          @Override
-          public FileVisitResult visitFile(Path file, BasicFileAttributes attrs)
-              throws IOException {
-            long diff = currentTime - Files.getLastModifiedTime(file).toMillis();
-            if (diff >= TEMP_THRESHOLD) {
-              Files.deleteIfExists(file);
-            }
-            return FileVisitResult.CONTINUE;
-          }
-        });
-  }
-
-  /**
-   * This method can be used to delete temporary file of an incomplete upload.
-   *
-   * @param fileId the upload file id
-   * @throws IOException if an I/O error occurs
-   */
-  public void clean(String fileId) throws IOException {
-    Files.deleteIfExists(getTempPath(fileId));
   }
 
   /**
@@ -378,7 +272,8 @@ public class MetaFiles {
    * doesn't create {@link MetaFile} instance.
    *
    * <p>The temporary file generated should be manually uploaded again using {@link #upload(File,
-   * MetaFile)} or should be deleted using {@link #clean(String)} method if something went wrong.
+   * MetaFile)} or should be deleted using {@link TempFiles#clean(String)} method if something went
+   * wrong.
    *
    * @param chunk the input stream
    * @param startOffset the start offset byte position
@@ -389,42 +284,24 @@ public class MetaFiles {
    */
   public File upload(InputStream chunk, long startOffset, long fileSize, String fileId)
       throws IOException {
-    final Path tmp = getTempPath(fileId);
+    Objects.requireNonNull(chunk, "input stream can't be null");
+    final Path tmp = TempFiles.findTempFile(fileId);
     if ((fileSize > -1 && startOffset > fileSize)
         || (Files.exists(tmp) && Files.size(tmp) != startOffset)
         || (!Files.exists(tmp) && startOffset > 0)) {
       throw new IllegalArgumentException("Start offset is out of bound.");
     }
 
-    // make sure the upload directories exist
-    Files.createDirectories(getTempPath());
-
     // clean up obsolete temporary files
     try {
-      clean();
+      TempFiles.clean();
     } catch (Exception e) {
+      // ignore
     }
 
-    final File file = tmp.toFile();
-    final BufferedOutputStream bos =
-        new BufferedOutputStream(new FileOutputStream(file, startOffset > 0));
-    try {
-      int read = 0;
-      long total = startOffset;
-      byte[] bytes = new byte[4096];
-      while ((read = chunk.read(bytes)) != -1) {
-        total += read;
-        if (fileSize > -1 && total > fileSize) {
-          throw new IllegalArgumentException("Invalid chunk, oversized upload.");
-        }
-        bos.write(bytes, 0, read);
-      }
-      bos.flush();
-    } finally {
-      bos.close();
-    }
+    FileUtils.write(tmp, chunk, startOffset > 0);
 
-    return file;
+    return tmp.toFile();
   }
 
   /**
@@ -456,65 +333,63 @@ public class MetaFiles {
    */
   @Transactional
   public MetaFile upload(File file, MetaFile metaFile) throws IOException {
-    Preconditions.checkNotNull(metaFile);
-    Preconditions.checkNotNull(file);
+    Objects.requireNonNull(metaFile);
+    Objects.requireNonNull(file);
 
-    final boolean update = !isBlank(metaFile.getFilePath());
+    final Store store = FileStoreFactory.getStore();
+    final String originalFilePath = metaFile.getFilePath();
+    final boolean isExist = notBlank(originalFilePath) && store.hasFile(originalFilePath);
 
-    final String fileName =
-        isBlank(metaFile.getFileName()) ? file.getName() : metaFile.getFileName();
-    final String targetName = update ? metaFile.getFilePath() : fileName;
-    final Path path = getUploadPath(targetName);
-    final Path tmp = update ? createTempFile(null, null) : null;
-
-    if (update && Files.exists(path)) {
-      Files.move(path, tmp, MOVE_OPTIONS);
-    }
-
+    // Create a tmp copy of the file in case of recovery
+    File tmpCopy = null;
     try {
-      final Path source = file.toPath();
-      final Path target = getNextPath(fileName);
-
-      // make sure the target dirs exist
-      Files.createDirectories(target.getParent());
-
-      // if source is in tmp directory, move it otherwise copy
-      if (getTempPath().equals(source.getParent())) {
-        Files.move(source, target, MOVE_OPTIONS);
-      } else {
-        Files.copy(source, target, COPY_OPTIONS);
+      if (isExist) {
+        if (store.getStoreType() == StoreType.FILE_SYSTEM) {
+          tmpCopy = TempFiles.createTempFile().toFile();
+          FileUtils.copyFile(store.getFile(originalFilePath), tmpCopy);
+          store.deleteFile(originalFilePath);
+        } else {
+          tmpCopy = store.getFile(originalFilePath);
+          store.deleteFile(originalFilePath);
+        }
       }
 
-      // only update file name if not provides from meta file
-      if (isBlank(metaFile.getFileName())) {
-        metaFile.setFileName(file.getName());
-      }
-      if (isBlank(metaFile.getFileType())) {
-        metaFile.setFileType(MimeTypesUtils.getContentType(target));
-      }
-      metaFile.setFileSize(Files.size(target));
-      metaFile.setFilePath(getUploadPath().relativize(target).toString());
+      String fileName = isBlank(metaFile.getFileName()) ? file.getName() : metaFile.getFileName();
+      String filePath;
+
+      filePath = resolveFileName(fileName, store);
+      UploadedFile uploadedFile = store.addFile(file, filePath);
+
+      metaFile.setFileName(fileName);
+      metaFile.setFileType(uploadedFile.getContentType());
+      metaFile.setFileSize(uploadedFile.getSize());
+      metaFile.setFilePath(uploadedFile.getPath());
+      metaFile.setStoreType(uploadedFile.getStoreType().getValue());
 
       try {
         return filesRepo.save(metaFile);
       } catch (Exception e) {
         // delete the uploaded file
-        Files.deleteIfExists(target);
+        try {
+          store.deleteFile(filePath);
+        } catch (Exception ex) {
+          // ignore, file may not completely uploaded
+        }
         // restore original file
-        if (tmp != null) {
-          Files.move(tmp, target, MOVE_OPTIONS);
+        if (tmpCopy != null) {
+          store.addFile(tmpCopy, originalFilePath);
         }
         throw new PersistenceException(e);
       }
     } finally {
-      if (tmp != null) {
-        Files.deleteIfExists(tmp);
+      if (tmpCopy != null) {
+        Files.deleteIfExists(tmpCopy.toPath());
       }
     }
   }
 
   /**
-   * Upload the given stream to the upload directory and link it to the to given {@link MetaFile}.
+   * Upload the given stream to the upload directory and link it to the given {@link MetaFile}.
    *
    * <p>The given {@link MetaFile} instance must have fileName set to save the stream as file.
    * Upload the stream
@@ -526,11 +401,11 @@ public class MetaFiles {
    */
   @Transactional
   public MetaFile upload(InputStream stream, MetaFile metaFile) throws IOException {
-    Preconditions.checkNotNull(stream, "stream can't be null");
-    Preconditions.checkNotNull(metaFile, "meta file can't be null");
-    Preconditions.checkNotNull(metaFile.getFileName(), "meta file should have filename");
+    Objects.requireNonNull(stream, "stream can't be null");
+    Objects.requireNonNull(metaFile, "meta file can't be null");
+    Objects.requireNonNull(metaFile.getFileName(), "meta file should have filename");
 
-    final Path tmp = createTempFile(null, null);
+    final Path tmp = TempFiles.createTempFile();
     final File tmpFile = upload(stream, 0, -1, tmp.toFile().getName());
 
     return upload(tmpFile, metaFile);
@@ -580,10 +455,10 @@ public class MetaFiles {
    */
   @Transactional
   public DMSFile attach(MetaFile metaFile, String fileName, Model entity) {
-    Preconditions.checkNotNull(metaFile);
-    Preconditions.checkNotNull(metaFile.getId());
-    Preconditions.checkNotNull(entity);
-    Preconditions.checkNotNull(entity.getId());
+    Objects.requireNonNull(metaFile);
+    Objects.requireNonNull(metaFile.getId());
+    Objects.requireNonNull(entity);
+    Objects.requireNonNull(entity.getId());
 
     final String name = isBlank(fileName) ? metaFile.getFileName() : fileName;
     final DMSFile dmsFile = new DMSFile();
@@ -625,9 +500,9 @@ public class MetaFiles {
    * @return a new instance of {@link MetaAttachment}
    */
   public MetaAttachment attach(MetaFile file, Model entity) {
-    Preconditions.checkNotNull(file);
-    Preconditions.checkNotNull(entity);
-    Preconditions.checkNotNull(entity.getId());
+    Objects.requireNonNull(file);
+    Objects.requireNonNull(entity);
+    Objects.requireNonNull(entity.getId());
 
     MetaAttachment attachment = new MetaAttachment();
     attachment.setMetaFile(file);
@@ -645,8 +520,8 @@ public class MetaFiles {
    */
   @Transactional
   public void delete(MetaAttachment attachment) throws IOException {
-    Preconditions.checkNotNull(attachment);
-    Preconditions.checkNotNull(attachment.getMetaFile());
+    Objects.requireNonNull(attachment);
+    Objects.requireNonNull(attachment.getMetaFile());
 
     MetaAttachmentRepository attachments = Beans.get(MetaAttachmentRepository.class);
     DMSFileRepository dms = Beans.get(DMSFileRepository.class);
@@ -679,21 +554,17 @@ public class MetaFiles {
    */
   @Transactional
   public void delete(MetaFile metaFile) throws IOException {
-    Preconditions.checkNotNull(metaFile);
-
-    Path target = getUploadPath(metaFile.getFilePath());
+    Objects.requireNonNull(metaFile);
 
     filesRepo.remove(metaFile);
 
-    if (Files.exists(target)) {
-      Path tmp = createTempFile(null, null);
-      Files.move(target, tmp, MOVE_OPTIONS);
-      try {
-        Files.delete(tmp);
-      } catch (IOException e) {
-        Files.move(tmp, target);
-        throw e;
+    Store store = FileStoreFactory.getStore();
+    try {
+      if (store.hasFile(metaFile.getFilePath())) {
+        store.deleteFile(metaFile.getFilePath());
       }
+    } catch (Exception e) {
+      throw new IOException(e);
     }
   }
 
@@ -748,11 +619,21 @@ public class MetaFiles {
    * @return download link
    */
   public String getDownloadLink(MetaFile metaFile, Model parentModel) {
-    return String.format(
-        "ws/rest/%s/%d/content/download?parentModel=%s&parentId=%d",
-        MetaFile.class.getName(),
-        metaFile.getId(),
-        EntityHelper.getEntityClass(parentModel).getName(),
-        parentModel.getId());
+    return "ws/rest/%s/%d/content/download?parentModel=%s&parentId=%d"
+        .formatted(
+            MetaFile.class.getName(),
+            metaFile.getId(),
+            EntityHelper.getEntityClass(parentModel).getName(),
+            parentModel.getId());
+  }
+
+  private static final MediaType[] BROWSER_PREVIEW_COMPATIBLE_MEDIA_TYPE = {
+    new MediaType("application", "pdf"), new MediaType("image", "*"), new MediaType("text", "html")
+  };
+
+  public static boolean isBrowserPreviewCompatible(MediaType mediaType) {
+    return mediaType != null
+        && Arrays.stream(BROWSER_PREVIEW_COMPATIBLE_MEDIA_TYPE)
+            .anyMatch(s -> s.isCompatible(mediaType));
   }
 }
