@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.rpc.filter;
 
@@ -41,7 +27,7 @@ class RangeFilter extends SimpleFilter {
   public String getQuery() {
 
     if (getOperator() == Operator.BETWEEN || getOperator() == Operator.NOT_BETWEEN) {
-      return String.format("(%s %s ? AND ?)", getOperand(), getOperator());
+      return "(%s %s ? AND ?)".formatted(getOperand(), getOperator());
     }
 
     StringBuilder sb = new StringBuilder(getOperand());
@@ -61,6 +47,6 @@ class RangeFilter extends SimpleFilter {
 
   @Override
   public List<Object> getParams() {
-    return new ArrayList<Object>(values);
+    return new ArrayList<>(values);
   }
 }
