@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.meta.loader;
 
@@ -33,12 +19,12 @@ import com.axelor.meta.schema.views.PanelInclude;
 import com.axelor.meta.schema.views.Search;
 import com.axelor.script.ScriptHelper;
 import com.axelor.test.db.Title;
-import com.google.common.collect.Maps;
 import com.google.inject.persist.Transactional;
+import jakarta.inject.Inject;
 import java.io.StringWriter;
 import java.net.URL;
+import java.util.HashMap;
 import java.util.Map;
-import javax.inject.Inject;
 import org.junit.jupiter.api.Test;
 
 public class TestViews extends MetaTest {
@@ -83,12 +69,12 @@ public class TestViews extends MetaTest {
 
     assertNotNull(json);
 
-    Search search = (Search) views.getViews().get(0);
+    Search search = (Search) views.getViews().getFirst();
 
     Title title = all(Title.class).filter("self.code = ?", "mr").fetchOne();
     assertNotNull(title);
 
-    Map<String, Object> binding = Maps.newHashMap();
+    Map<String, Object> binding = new HashMap<>();
     binding.put("customer", "Some");
     binding.put("date", "2011-11-11");
     binding.put("xxx", 111);
@@ -96,7 +82,7 @@ public class TestViews extends MetaTest {
     binding.put("country", "IN");
     binding.put("value", "100.10");
 
-    Map<String, Object> partner = Maps.newHashMap();
+    Map<String, Object> partner = new HashMap<>();
     partner.put("firstName", "Name");
 
     binding.put("partner", partner);
@@ -124,7 +110,7 @@ public class TestViews extends MetaTest {
     assertTrue(form1 instanceof FormView);
     assertTrue(form2 instanceof FormView);
 
-    final PanelInclude include = (PanelInclude) ((FormView) form2).getItems().get(0);
+    final PanelInclude include = (PanelInclude) ((FormView) form2).getItems().getFirst();
     final AbstractView included = include.getView();
 
     assertEquals(form1.getName(), included.getName());
@@ -134,12 +120,12 @@ public class TestViews extends MetaTest {
   public void testChart() throws Exception {
     ObjectViews views = this.unmarshal("com/axelor/meta/Charts.xml", ObjectViews.class);
 
-    ChartView chartView = (ChartView) views.getViews().get(0);
+    ChartView chartView = (ChartView) views.getViews().getFirst();
 
     assertEquals(1, chartView.getActions().size());
-    assertEquals("testChartAction", chartView.getActions().get(0).getName());
+    assertEquals("testChartAction", chartView.getActions().getFirst().getName());
     assertEquals(
-        "com.axelor.meta.web.Hello:chartAction", chartView.getActions().get(0).getAction());
+        "com.axelor.meta.web.Hello:chartAction", chartView.getActions().getFirst().getAction());
 
     StringWriter writer = new StringWriter();
     XMLViews.marshal(views, writer);
