@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.rpc;
 
@@ -32,13 +18,12 @@ import com.axelor.test.db.Circle;
 import com.axelor.test.db.Contact;
 import com.axelor.test.db.Title;
 import com.axelor.test.db.repo.ContactRepository;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Maps;
 import com.google.inject.persist.Transactional;
+import jakarta.inject.Inject;
 import java.time.LocalDate;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import javax.inject.Inject;
 import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -98,13 +83,13 @@ public class ResourceTest extends RpcTest {
     Contact p = JPA.em().find(Contact.class, ((Map) res.getItem(0)).get("id"));
 
     assertEquals(Title.class, p.getTitle().getClass());
-    assertEquals(Address.class, p.getAddresses().get(0).getClass());
-    assertEquals(Circle.class, p.getCircle(0).getClass());
+    assertEquals(Address.class, p.getAddresses().getFirst().getClass());
+    assertEquals(Circle.class, p.getCircles().iterator().next().getClass());
     assertEquals(LocalDate.class, p.getDateOfBirth().getClass());
 
     assertEquals("mr", p.getTitle().getCode());
-    assertEquals("France", p.getAddresses().get(0).getCountry().getName());
-    assertEquals("family", p.getCircle(0).getCode());
+    assertEquals("France", p.getAddresses().getFirst().getCountry().getName());
+    assertEquals("family", p.getCircles().iterator().next().getCode());
     assertEquals("1977-05-01", p.getDateOfBirth().toString());
   }
 
@@ -114,14 +99,14 @@ public class ResourceTest extends RpcTest {
   public void testUpdate() throws Exception {
 
     Contact c = contacts.all().fetchOne();
-    Map<String, Object> data = Maps.newHashMap();
+    Map<String, Object> data = new HashMap<>();
 
     data.put("id", c.getId());
     data.put("version", c.getVersion());
     data.put("firstName", "jack");
     data.put("lastName", "sparrow");
 
-    String json = toJson(ImmutableMap.of("data", data));
+    String json = toJson(Map.of("data", data));
 
     Request req = fromJson(json, Request.class);
     Response res = resource.save(req);
@@ -150,7 +135,7 @@ public class ResourceTest extends RpcTest {
     assertNotSame(c.getAddresses(), n.getAddresses());
     assertEquals(c.getAddresses().size(), n.getAddresses().size());
 
-    assertSame(c, c.getAddresses().get(0).getContact());
-    assertSame(n, n.getAddresses().get(0).getContact());
+    assertSame(c, c.getAddresses().getFirst().getContact());
+    assertSame(n, n.getAddresses().getFirst().getContact());
   }
 }
