@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.gradle.tasks;
 
@@ -25,7 +11,6 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.regex.Matcher;
@@ -73,7 +58,7 @@ public class EncryptFileTask extends AbstractEncryptTask {
   public void printOutput() {
     log("");
     log("-------OUTPUT-------");
-    String text = String.format("Found and encrypt %s setting(s)", encodedSettings.size());
+    String text = "Found and encrypt %s setting(s)".formatted(encodedSettings.size());
     if (ObjectUtils.notEmpty(encodedSettings)) {
       text += " : " + String.join(", ", encodedSettings);
     }
@@ -96,7 +81,7 @@ public class EncryptFileTask extends AbstractEncryptTask {
     if (StringUtils.isBlank(this.file)) {
       return super.getConfigurationFile();
     }
-    return Paths.get(this.file);
+    return Path.of(this.file);
   }
 
   class FileProcessor {
