@@ -1,20 +1,6 @@
 /*
- * Axelor Business Solutions
- *
- * Copyright (C) 2005-2025 Axelor (<http://axelor.com>).
- *
- * This program is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Affero General Public License as
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Affero General Public License for more details.
- *
- * You should have received a copy of the GNU Affero General Public License
- * along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ * SPDX-FileCopyrightText: Axelor <https://axelor.com>
+ * SPDX-License-Identifier: AGPL-3.0-or-later
  */
 package com.axelor.tools.code.entity.model;
 
@@ -28,13 +14,13 @@ import com.axelor.tools.code.JavaCode;
 import com.axelor.tools.code.JavaCodeUtils;
 import com.axelor.tools.code.JavaMethod;
 import com.axelor.tools.code.JavaParam;
+import jakarta.xml.bind.annotation.XmlAttribute;
+import jakarta.xml.bind.annotation.XmlType;
 import java.lang.reflect.Modifier;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import javax.xml.bind.annotation.XmlAttribute;
-import javax.xml.bind.annotation.XmlType;
 
 @XmlType
 public class Finder {
@@ -195,7 +181,7 @@ public class Finder {
                   ? entity.getPackageName() + "." + propType
                   : prop.getTarget();
         }
-        query.add(String.format("self.%s = :%s", propName, propName));
+        query.add("self.%s = :%s".formatted(propName, propName));
       }
       propName = JavaCodeUtils.firstLower(propName);
 
@@ -226,7 +212,7 @@ public class Finder {
       code.add(new JavaCode("  .fetchOne()"));
     }
 
-    code.get(code.size() - 1).next(";");
+    code.getLast().next(";");
 
     return method.code(code);
   }
